  Features:
    - Settings to control how infinite ores from mods are handled. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/20)
    - Setting to stretch out resource richness increase. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/21)
  Balance:
    - Reduce frequency of Mangrove (Bruguiera) by half. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/17)
  Bugfixes:
    - Mangrove (Bruguiera) not removed in terraforming. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/16)
    - Maze terraforming collision mask fix. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/23)
    - Oil spacing changed in existing saves. NOTE: you'll need to move your pumpjacks! (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/25)
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 30. 11. 2018
  Features:
    - New setting: Patchwork Size for Mixed Resources. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/11)
    - Grid-based crude oil entity placement with better spacing (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/10)
  Optimisations:
    - Cache settings and configuration values, especially the resource matrix. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/13)
  Bugfixes:
    - Each resource patch now uses its dedicated random number sequence as intended, so that order of chunk generation doesn't affect resources. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/14)
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 25. 11. 2018
  Major Features:
    - New setting: Clear start chunks. Can be used to clear an area near the start to make more room to build. Recommend a value of at least 1 if using AAI Industries, for the shipwreck. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/7)
  Bugfixes: